added customizable terrains for ships
right now the interaction with outfits is only a number that will be multiplied by the terrain number to affect the weapon's effectiveness

--- a/EndlessSkyLib.cbp
+++ b/EndlessSkyLib.cbp
@@ -320,6 +320,8 @@
 		<Unit filename="source/StellarObject.h" />
 		<Unit filename="source/System.cpp" />
 		<Unit filename="source/System.h" />
+		<Unit filename="source/Terrain.cpp" />
+		<Unit filename="source/Terrain.h" />
 		<Unit filename="source/Test.cpp" />
 		<Unit filename="source/Test.h" />
 		<Unit filename="source/TestContext.cpp" />
